--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="quarto-title-meta">
   </div>
 </header><main class="content" id="quarto-document-content">
-<p>About this blog</p>
+<p>My name is Tyler Scheel. I am a Junior Sports Media and Communications major at the UNL CoJMC. I love all things sports. I’ve always been fascinated by sports statistics and how they can prove or disprove fans wild takes.</p>
 
 
 </main> 
