--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -165,7 +165,40 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="" data-listing-date-sort="1698728400000" data-listing-file-modified-sort="1698790195996" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
+<div class="quarto-post image-right" data-index="0" data-categories="" data-listing-date-sort="1699768800000" data-listing-file-modified-sort="1699844227133" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="thumbnail">
+<p><a href="./posts/kansas-city-pass-catchers/index.html"> <img src="./posts/kansas-city-pass-catchers/Chart1Screenshot.png" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/kansas-city-pass-catchers/index.html">
+<h3 class="no-anchor listing-title">
+Kansas City Pass Catchers: Underrated or Underhated?
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+
+</div>
+<a href="./posts/kansas-city-pass-catchers/index.html">
+<div class="listing-description">
+With 5 Straight AFC Championship game appearances and 2 Super Bowl wins since 2018, Chiefs fans have to get creative when finding something to complain about. Over the years…
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/kansas-city-pass-catchers/index.html">
+<div class="listing-date">
+Nov 12, 2023
+</div>
+<div class="listing-author">
+Tyler Scheel
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="" data-listing-date-sort="1698728400000" data-listing-file-modified-sort="1698790195996" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
 <div class="thumbnail">
 <p><a href="./posts/introduction/index.html"> <img src="./posts/introduction/image.png" class="thumbnail-image"> </a></p>
 </div>
