second blog post

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -165,7 +165,40 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="" data-listing-date-sort="1699768800000" data-listing-file-modified-sort="1699847268288" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="0" data-categories="" data-listing-date-sort="1701583200000" data-listing-file-modified-sort="1701659576471" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="13">
+<div class="thumbnail">
+<p><a href="./posts/nfl-franchise-draft-picks/index.html"> <img src="./posts/nfl-franchise-draft-picks/PlayerAVShare.png" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/nfl-franchise-draft-picks/index.html">
+<h3 class="no-anchor listing-title">
+Analysis of NFL Franchises Draft Picks Since 2015
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+
+</div>
+<a href="./posts/nfl-franchise-draft-picks/index.html">
+<div class="listing-description">
+For many fans, the next NFL draft is the only sliver of hope in an otherwise bleak season. The potential of getting a top quarterback in April has bad franchises willing to…
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/nfl-franchise-draft-picks/index.html">
+<div class="listing-date">
+Dec 3, 2023
+</div>
+<div class="listing-author">
+Tyler Scheel
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="" data-listing-date-sort="1699768800000" data-listing-file-modified-sort="1701637137776" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./posts/kansas-city-pass-catchers/index.html"> <img src="./posts/kansas-city-pass-catchers/Chart1Screenshot.png" class="thumbnail-image"> </a></p>
 </div>
@@ -198,7 +231,7 @@ Tyler Scheel
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="" data-listing-date-sort="1698728400000" data-listing-file-modified-sort="1698790195996" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
+<div class="quarto-post image-right" data-index="2" data-categories="" data-listing-date-sort="1698728400000" data-listing-file-modified-sort="1698790195996" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
 <div class="thumbnail">
 <p><a href="./posts/introduction/index.html"> <img src="./posts/introduction/image.png" class="thumbnail-image"> </a></p>
 </div>
