--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="" data-listing-date-sort="1701583200000" data-listing-file-modified-sort="1701659576471" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="13">
+<div class="quarto-post image-right" data-index="0" data-categories="" data-listing-date-sort="1701583200000" data-listing-file-modified-sort="1701660896878" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="13">
 <div class="thumbnail">
 <p><a href="./posts/nfl-franchise-draft-picks/index.html"> <img src="./posts/nfl-franchise-draft-picks/PlayerAVShare.png" class="thumbnail-image"> </a></p>
 </div>
@@ -183,7 +183,7 @@ Analysis of NFL Franchises Draft Picks Since 2015
 </div>
 <a href="./posts/nfl-franchise-draft-picks/index.html">
 <div class="listing-description">
-For many fans, the next NFL draft is the only sliver of hope in an otherwise bleak season. The potential of getting a top quarterback in April has bad franchises willing to…
+For many fans, the next NFL draft is the only sliver of hope in an otherwise bleak season. The potential of getting a top quarterback in April tempts failing franchises to…
 </div>
 </a>
 </div>
